# kura

./: Cargo.toml  LICENSE  README.md  test.koto
crates/demo-lib/: Cargo.toml
crates/kura/: Cargo.toml
crates/kura/src/: build.rs  commands.rs  config.rs  main.rs  package.rs  run.rs  template_main.rs
demo-lib/: Cargo.toml
demo-lib/src/: lib.rs
otherlib/: Cargo.toml
otherlib/src/: lib.rs
