[package]
name = "kura"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A package manager for Koto programming language"
keywords = ["koto", "package-manager", "build-tool", "cli"]
categories = ["command-line-utilities", "development-tools"]
# readme = "README.md"

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
toml = "0.8"

[lints]
workspace = true
