[package]
name = "koto_kura"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
toml = "0.8"
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["blocking"] }

[lints]
workspace = true
